--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+  # Player
+  audioplayers: ^0.15.1
+
+  # Simple way to use HEX colors in app
+  hexcolor: ^1.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -50,7 +56,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
 
   assets:
-    - assets/sounds/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
